Added weather data in JS

--- a/first-weather-app/src/style.css
+++ b/first-weather-app/src/style.css
@@ -63,15 +63,15 @@ a {
   display: flex;
 }
 .weather-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 .weather-temperature {
   font-size: 88px;
-  margin-left: 10px;
+  line-height: 88px;
   font-weight: 600;
 }
 .weather-unit {
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 28px;
 }
